kubernetes/overlays/prod/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slacathon26
  namespace: slacathon26
spec:
  template:
    spec:
      containers:
        - name: app
          image: ghcr.io/slaclab/slacathon26:latest
