kubernetes/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slacathon26
  namespace: slacathon26
spec:
  rules:
    - host: ard-modeling-service.slac.stanford.edu
